# foocat_yjq

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocat_yjq.rst  modules.rst
foocat_yjq/: foocat_yjq.py
tests/: test_foocat_yjq.py
