[tool.poetry]
name = "foocat_yjq"
version = "0.1.0"
description = "useful python function"
authors = ["Jasmine Qin <yijia.qin@alumni.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
