[tool.poetry]
name = "foocat_yjq"
version = "0.1.0"
description = "useful python function"
authors = ["Jasmine Qin <yijia.qin@alumni.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"

[tool.poetry.dev-dependencies]
sphinx = "^2.4"
sphinxcontrib-napoleon = "^0.7.0"
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
